# adrone-hs.vim

./: .gitignore
adrone-hs/: adrone-hs.cabal  tags
adrone-hs/src/: Main.hs
adrone-hs/src/Data/: AdroneException.hs  Diary.hs
autoload/: adronehs.vim
autoload/vital/: adronehs.vital
plugin/: adronehs.vim
