name:                adrone-hs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/aiya000/adrone-hs#readme
license:             BSD3
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           20xx aiya000
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable adrone-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Data.AdroneException
                     , Data.Diary
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , exceptions
                     , extra
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , text
                     , time
                     , unix
